Poprawienie logowania na windowsie oraz pokazywanie zgłoszeń w powiadomieniach
