# yukka-ui/src/app/services/models/powiadomienie-dto.ts
@@ -14,4 +14,6 @@ export interface PowiadomienieDto {
   typ?: string;
   tytul?: string;
   uzytkownikNazwa?: string;
+  zglaszany?: string;
+  zgloszenie?: boolean;
 }
