# yukka-ui/src/app/services/models/zgloszenie-request.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ZgloszenieRequest {
+  opis: string;
+  zglaszany: string;
+}
